# open-cv

./: .gitignore  README.md
.github/workflows/: docker-images.yml
video_pipeline/: README.md  docker-compose.yml  main.py  pyproject.toml
video_pipeline/app/: config.py  env.py  wiring.py
video_pipeline/app/application/interfaces/: event_bus.py  segmenter.py  storage.py
video_pipeline/app/application/use_cases/: process_ai.py  segment_video.py  upload_video.py
video_pipeline/app/domain/entities/: segment.py  video.py
video_pipeline/app/domain/repositories/: video_repo.py
video_pipeline/app/domain/services/: video_service.py
video_pipeline/app/infrastructure/messaging/: kafka_bus.py
video_pipeline/app/infrastructure/persistence/: migrations.sql  migrations_sql.py  postgres_repo.py
video_pipeline/app/infrastructure/processing/: ffmpeg_segmenter.py
video_pipeline/app/infrastructure/storage/: s3_storage.py
video_pipeline/app/interface/: api.py  ws.py
video_pipeline/app/tools/: cleanup_storage.py  sync_model.py
video_pipeline/app/workers/: _consumer.py  ai_worker.py  segment_worker.py
video_pipeline/docker/: ai-entrypoint.sh  api.Dockerfile  segment-worker.Dockerfile  streamlit.Dockerfile  worker.Dockerfile
video_pipeline/docs/: README.md  api.md  architecture.md  ci-cd.md  database.md  events.md  for-beginners.md  plan-standardization-segments-metadata.md  realtime.md  runbook.md  storage.md  ui.md  upload.md
video_pipeline/ui/: README.md  app.py
